# blaspp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GNUmakefile  GNUmakefile.subdir  INSTALL.md  INSTALL.txt  Jenkinsfile  LICENSE  Makefile  README.md  blas_defines.h.in  blasppConfig.cmake.in  configure.py  make.inc.in  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-gcc-cuda  make.inc.mkl-icc  make.inc.openblas
.github/workflows/: build.sh  configure.sh  main.yml  setup_env.sh  test.sh  variants.yml
batch/: batch_aux.hh  batch_check.hh  batch_common.hh  batch_support.hh
cmake/: BLASConfig.cmake  BLASFinder.cmake  CBLASConfig.cmake  LAPACKConfig.cmake  LAPACKFinder.cmake  config.cmake  util.cmake
config/: BLASConfig.cmake  CBLASConfig.cmake  LAPACKConfig.cmake  acml_version.cc  ansicodes.py  blas.cc  blis_version.cc  cblas.cc  compiler_cxx.cc  config.h  config.py  cublas.cc  essl_version.cc  hello.cc  lapack-debug.py  lapack-save.py  lapack.py  lapack_potrf.cc  lapack_pstrf.cc  mkl_version.cc  onemkl.cc  openblas_version.cc  openmp.cc  require_libatomic.cc  return_complex.cc  return_complex_argument.cc  return_float.cc  return_float16.cc  return_float_f2c.cc  rocblas.cc  std_atomic.cc
device/: batch_gemm_device.hh  batch_hemm_device.hh  batch_her2k_device.hh  batch_herk_device.cc  batch_herk_device.hh  batch_symm_device.cc  batch_symm_device.hh  batch_syr2k_device.hh  batch_syrk_device.cc  batch_syrk_device.hh  batch_trmm_device.cc  batch_trmm_device.hh  batch_trsm_device.hh  device.hh  device_blas.hh  device_blas_names.hh  device_blas_wrappers.cc  device_blas_wrappers.hh  device_copy.hh  device_error.cc  device_error.hh  device_internals.hh  device_queue.cc  device_queue.hh  device_types.hh  device_utils.hh  gemm_device.cc  gemm_device.hh  hemm_device.hh  her2k_device.hh  herk_device.cc  herk_device.hh  symm_device.cc  symm_device.hh  syr2k_device.cc  syr2k_device.hh  syrk_device.hh  trmm_device.cc  trmm_device.hh  trsm_device.cc  (+1 more)
docs/doxygen/: DoxygenLayout.xml  GNUmakefile  doxyfile.conf  errors.pl  groups.dox
example/: CMakeLists.txt  Makefile  README.md  example_gemm.cc  example_util.cc  util.hh
examples/: CMakeLists.txt  Makefile  README.md  example_gemm.cc  example_util.cc  util.hh
include/: GNUmakefile  Makefile  asum.hh  axpy.hh  batch_common.hh  blas.hh  blas_config.h  blas_flops.hh  blas_fortran.hh  blas_mangling.hh  blas_util.hh  blas_wrappers.hh  copy.hh  device.hh  device_blas.hh  device_blas_names.hh  device_internals.hh  device_types.hh  dot.hh  gemm.hh  gemv.hh  ger.hh  geru.hh  hemm.hh  hemv.hh  her.hh  her2.hh  her2k.hh  herk.hh  iamax.hh  nrm2.hh  rot.hh  rotg.hh  rotm.hh  rotmg.hh  scal.hh  swap.hh  symm.hh  symv.hh  syr.hh  (+7 more)
include/blas/: GNUmakefile  asum.hh  axpy.hh  batch_common.hh  config.h  copy.hh  counter.hh  defines.h.in  device.hh  device_blas.hh  device_blas_names.hh  device_internals.hh  device_types.hh  dot.hh  dotu.hh  flops.hh  fortran.h  gemm.hh  gemv.hh  ger.hh  geru.hh  hemm.hh  hemv.hh  her.hh  her2.hh  her2k.hh  herk.hh  iamax.hh  mangling.h  nrm2.hh  rot.hh  rotg.hh  rotm.hh  rotmg.hh  scal.hh  swap.hh  symm.hh  symv.hh  syr.hh  syr2.hh  (+8 more)
lib/pkgconfig/: blaspp.pc.in
modules/: FindLibtest.cmake  FindMKL.cmake  MKLConfig.cmake
src/: asum.cc  axpy.cc  batch_gemm.cc  batch_hemm.cc  batch_her2k.cc  batch_herk.cc  batch_symm.cc  batch_syr2k.cc  batch_syrk.cc  batch_trmm.cc  batch_trsm.cc  blas_internal.hh  copy.cc  cublas_wrappers.cc  device_amax.cc  device_amin.cc  device_asum.cc  device_axpy.cc  device_batch_gemm.cc  device_batch_gemm_group.cc  device_batch_hemm.cc  device_batch_her2k.cc  device_batch_herk.cc  device_batch_symm.cc  device_batch_syr2k.cc  device_batch_syrk.cc  device_batch_trmm.cc  device_batch_trsm.cc  device_blas_wrappers.cc  device_copy.cc  device_dot.cc  device_error.cc  device_gemm.cc  device_gemv.cc  device_ger.cc  device_hemm.cc  device_hemv.cc  device_her.cc  device_her2.cc  device_her2k.cc  (+58 more)
src/cuda/: device_conj.cu  device_shift_vec.cu
src/hip/: device_conj.hip  device_shift_vec.hip
src/sycl/: device_conj.cc
test/: CMakeLists.txt  GNUmakefile  Makefile  blas_flops.hh  cblas.hh  cblas_wrappers.cc  cblas_wrappers.hh  check_gemm.hh  flops.hh  get_type_name.hh  lapack.hh  lapack_tmp.hh  lapack_wrappers.cc  lapack_wrappers.hh  make.inc.macos  make.inc.mkl-gcc  make.inc.mkl-icc  print_matrix.hh  run_all.sh  run_tests.py  test.cc  test.hh  test_asum.cc  test_asum_device.cc  test_axpy.cc  test_axpy_device.cc  test_batch_gemm.cc  test_batch_gemm_device.cc  test_batch_hemm.cc  test_batch_hemm_device.cc  test_batch_her2k.cc  test_batch_her2k_device.cc  test_batch_herk.cc  test_batch_herk_device.cc  test_batch_symm.cc  test_batch_symm_device.cc  test_batch_syr2k.cc  test_batch_syr2k_device.cc  test_batch_syrk.cc  test_batch_syrk_device.cc  (+80 more)
test/cuda/: utils.cu
test/hip/: utils.hip.cc  utils.hip.cc.dep
test/testbase_utils/: CMakeLists.txt  testsweeper.cc  testsweeper.hh  testsweeperConfig.cmake.in  version.cc
test/testbase_utils/config/: ansicodes.py  compiler_cxx.cc  config.py
test/testbase_utils/test/: CMakeLists.txt  run_tests.py  test.cc  test.hh  test_sort.cc
test/testbase_utils/test/ref/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  100.txt  101.txt  200.txt  201.txt  202.txt  203.txt  204.txt  205.txt  206.txt  207.txt  208.txt  300.txt  301.txt  302.txt  303.txt  400.txt  401.txt  402.txt  403.txt  404.txt  500.txt  501.txt  502.txt  503.txt  600.txt  601.txt  602.txt  603.txt  604.txt  605.txt  606.txt
test/testbase_utils/tools/: make_release.py  release.py
tools/: make_release.py  release.py
